deploy: 2294a6cd0f7b21fd8dd24e184e86a33bf3aaea67

--- a/inherits.html
+++ b/inherits.html
@@ -153,14 +153,20 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 <area shape="rect" href="classthemeEngine.html" title="The themeEngine class provides theme functions." alt="" coords="138,360,235,387"/>
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_7.png" border="0" usemap="#aQTextEdit" alt=""/>
+<tr><td><img src="inherit_graph_7.png" border="0" usemap="#aQTcpServer" alt=""/>
+<map name="aQTcpServer" id="aQTcpServer">
+<area shape="rect" title=" " alt="" coords="5,5,97,32"/>
+<area shape="rect" href="classmonitorServer.html" title="The monitorServer class is a QTcpServer that is used to communicate with Open&#45;Typer clients." alt="" coords="145,5,248,32"/>
+</map>
+</td></tr>
+<tr><td><img src="inherit_graph_8.png" border="0" usemap="#aQTextEdit" alt=""/>
 <map name="aQTextEdit" id="aQTextEdit">
 <area shape="rect" title=" " alt="" coords="5,5,84,32"/>
 <area shape="rect" href="classtextView.html" title="The textView class is a QTextEdit used to display text." alt="" coords="132,5,204,32"/>
 <area shape="rect" href="classinputLabelWidget.html" title="The inputLabelWidget class is a textView, which handles all key presses." alt="" coords="252,5,375,32"/>
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_8.png" border="0" usemap="#aQWidget" alt=""/>
+<tr><td><img src="inherit_graph_9.png" border="0" usemap="#aQWidget" alt=""/>
 <map name="aQWidget" id="aQWidget">
 <area shape="rect" title=" " alt="" coords="5,183,77,209"/>
 <area shape="rect" href="classbehaviorOptions.html" title="The behaviorOptions class is the behavior category in the options." alt="" coords="141,5,257,32"/>
@@ -173,7 +179,7 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 <area shape="rect" href="classstudentDetails.html" title="The studentDetails class is a widget for student results and statistics." alt="" coords="146,360,251,387"/>
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_9.png" border="0" usemap="#astringUtils" alt=""/>
+<tr><td><img src="inherit_graph_10.png" border="0" usemap="#astringUtils" alt=""/>
 <map name="astringUtils" id="astringUtils">
 <area shape="rect" href="classstringUtils.html" title="The stringUtils class contains functions related to strings." alt="" coords="5,5,87,32"/>
 </map>
