--- a/inherits.html
+++ b/inherits.html
@@ -156,17 +156,17 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 <area shape="rect" href="classthemeEngine.html" title="The themeEngine class provides theme functions." alt="" coords="138,360,235,387"/>
 </map>
 </td></tr>
-<tr><td><img src="inherit_graph_7.png" border="0" usemap="#aQTcpServer" alt=""/>
-<map name="aQTcpServer" id="aQTcpServer">
-<area shape="rect" title=" " alt="" coords="5,5,97,32"/>
-<area shape="rect" href="classmonitorServer.html" title="The monitorServer class is a QTcpServer that is used to communicate with Open&#45;Typer clients." alt="" coords="145,5,248,32"/>
-</map>
-</td></tr>
-<tr><td><img src="inherit_graph_8.png" border="0" usemap="#aQTextEdit" alt=""/>
+<tr><td><img src="inherit_graph_7.png" border="0" usemap="#aQTextEdit" alt=""/>
 <map name="aQTextEdit" id="aQTextEdit">
 <area shape="rect" title=" " alt="" coords="5,5,84,32"/>
 <area shape="rect" href="classtextView.html" title="The textView class is a QTextEdit used to display text." alt="" coords="132,5,204,32"/>
 <area shape="rect" href="classinputLabelWidget.html" title="The inputLabelWidget class is a textView, which handles all key presses." alt="" coords="252,5,375,32"/>
+</map>
+</td></tr>
+<tr><td><img src="inherit_graph_8.png" border="0" usemap="#aQWebSocketServer" alt=""/>
+<map name="aQWebSocketServer" id="aQWebSocketServer">
+<area shape="rect" title=" " alt="" coords="5,5,143,32"/>
+<area shape="rect" href="classmonitorServer.html" title="The monitorServer class is a QWebSocketServer that is used to communicate with Open&#45;Typer clients." alt="" coords="191,5,293,32"/>
 </map>
 </td></tr>
 <tr><td><img src="inherit_graph_9.png" border="0" usemap="#aQWidget" alt=""/>
