deploy: c2c822a3217ec43a5fec959dff4d7489c055927c

--- a/inherits.html
+++ b/inherits.html
@@ -102,7 +102,7 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 </td></tr>
 <tr><td><img src="inherit_graph_2.png" border="0" usemap="#aQDialog" alt=""/>
 <map name="aQDialog" id="aQDialog">
-<area shape="rect" title=" " alt="" coords="5,487,73,513"/>
+<area shape="rect" title=" " alt="" coords="5,512,73,539"/>
 <area shape="rect" href="classUpdaterDialog.html" title="The UpdaterDialog class is a dialog used for program updates." alt="" coords="149,5,253,32"/>
 <area shape="rect" href="classadminSelector.html" title="The adminSelector class is a dialog used to select an administrator account." alt="" coords="148,56,253,83"/>
 <area shape="rect" href="classclassEdit.html" title="The classEdit class is a dialog for class adding and editing." alt="" coords="163,107,238,133"/>
@@ -120,9 +120,10 @@ $(document).ready(function(){initNavTree('hierarchy.html',''); initResizable(); 
 <area shape="rect" href="classstatsDialog.html" title="The statsDialog class is a dialog, which shows exercise history." alt="" coords="157,715,244,741"/>
 <area shape="rect" href="classstudentEdit.html" title="The studentEdit class is a dialog used to add or edit students." alt="" coords="157,765,244,792"/>
 <area shape="rect" href="classstudentOptions.html" title="The studentOptions class is a dialog for student authentication." alt="" coords="145,816,256,843"/>
-<area shape="rect" href="classtimeDialog.html" title="The timeDialog class is a time selector dialog used for timed exercises." alt="" coords="159,867,242,893"/>
-<area shape="rect" href="classuserEdit.html" title="the userEdit class is a dialog used to add or edit users." alt="" coords="166,917,235,944"/>
-<area shape="rect" href="classuserManager.html" title="the userManager class is a widget for user management." alt="" coords="152,968,249,995"/>
+<area shape="rect" href="classtestWaitDialog.html" title="The testWaitDialog class is a dialog, which is displayed when client receives an exercise." alt="" coords="147,867,254,893"/>
+<area shape="rect" href="classtimeDialog.html" title="The timeDialog class is a time selector dialog used for timed exercises." alt="" coords="159,917,242,944"/>
+<area shape="rect" href="classuserEdit.html" title="the userEdit class is a dialog used to add or edit users." alt="" coords="166,968,235,995"/>
+<area shape="rect" href="classuserManager.html" title="the userManager class is a widget for user management." alt="" coords="152,1019,249,1045"/>
 </map>
 </td></tr>
 <tr><td><img src="inherit_graph_3.png" border="0" usemap="#aQFrame" alt=""/>
