deploy: 79b09b14b7c9b8f307b6ec3df5ce5ddade97fe01

--- a/classmonitorClient.html
+++ b/classmonitorClient.html
@@ -411,7 +411,7 @@ bool&#160;</td><td class="memItemRight" valign="bottom"><b>connecting</b> = fals
   </tr>
 </table>
 </div><div class="memdoc">
-<p >Returns true if server is enabled in the settings. </p>
+<p >Returns true if client is enabled in the settings. </p>
 
 </div>
 </div>
