--- a/index.html
+++ b/index.html
@@ -103,8 +103,16 @@ Features</h1>
 </ul>
 <h1><a class="anchor" id="autotoc_md3"></a>
 Download</h1>
-<p >Download the latest release from <a href="https://github.com/Open-Typer/Open-Typer/releases/latest">GitHub</a> or <a href="https://sourceforge.net/projects/open-typer/">SourceForge</a>.</p>
-<h1><a class="anchor" id="autotoc_md4"></a>
+<p >Download the latest release from <a href="https://github.com/Open-Typer/Open-Typer/releases/latest">GitHub</a> or <a href="https://sourceforge.net/projects/open-typer/">SourceForge</a> or follow platform-specific instructions below. </p>
+<h2><a class="anchor" id="autotoc_md4"></a>
+Ubuntu</h2>
+<p >Use the following commands to install Open-Typer from the PPA:</p>
+<div class="fragment"><div class="line">sudo add-apt-repository ppa:adazem009/open-typer</div>
+<div class="line"> </div>
+<div class="line">sudo apt update</div>
+<div class="line"> </div>
+<div class="line">sudo apt insall -y open-typer</div>
+</div><!-- fragment --><h1><a class="anchor" id="autotoc_md5"></a>
 Screenshots</h1>
 <p ><img src="main_window_light.png" alt="" class="inline" title="Main window (light)"/>     <img src="main_window_system_dark.png" alt="" class="inline" title="Main window (system dark)"/>     <img src="pack_editor_system_dark.png" alt="" class="inline" title="Pack editor"/>     <img src="optionsWindow.png" alt="" class="inline" title="Options"/>     </p>
 </div></div><!-- PageDoc -->
